--- a/index.html
+++ b/index.html
@@ -1,38 +1,45 @@
 <html>
-  <head>
-    <title>Angular 2 QuickStart JS</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+	<head>
+		<base href="/"/>
+		<title>Angular 2 QuickStart JS</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="styles.css">
 
-    <!-- 1. On charge toutes les librairies JS dont on a besoin -->
-    <!-- IE required polyfill -->
-    <script src="node_modules/core-js/client/shim.min.js"></script>
+		<!-- 1. Load libraries -->
+		<!-- IE required polyfill -->
+		<script src="node_modules/core-js/client/shim.min.js"></script>
 
-    <script src="node_modules/zone.js/dist/zone.js"></script>
-    <script src="node_modules/reflect-metadata/Reflect.js"></script>
+		<script src="node_modules/zone.js/dist/zone.js"></script>
+		<script src="node_modules/reflect-metadata/Reflect.js"></script>
 
-    <script src="node_modules/rxjs/bundles/Rx.umd.js"></script>
-    <script src="node_modules/@angular/core/bundles/core.umd.js"></script>
-    <script src="node_modules/@angular/common/bundles/common.umd.js"></script>
-    <script src="node_modules/@angular/compiler/bundles/compiler.umd.js"></script>
-    <script src="node_modules/@angular/forms/bundles/forms.umd.js"></script>
-    <script src="node_modules/@angular/platform-browser/bundles/platform-browser.umd.js"></script>
-    <script src="node_modules/@angular/platform-browser-dynamic/bundles/platform-browser-dynamic.umd.js"></script>
+		<script src="node_modules/rxjs/bundles/Rx.js"></script>
+		<script src="node_modules/@angular/core/bundles/core.umd.js"></script>
+		<script src="node_modules/@angular/common/bundles/common.umd.js"></script>
+		<script src="node_modules/@angular/compiler/bundles/compiler.umd.js"></script>
+		<script src="node_modules/@angular/platform-browser/bundles/platform-browser.umd.js"></script>
+		<script src="node_modules/@angular/platform-browser-dynamic/bundles/platform-browser-dynamic.umd.js"></script>
+		<script src="node_modules/@angular/router/bundles/router.umd.js"></script>
+		<script src="node_modules/@angular/forms/bundles/forms.umd.js"></script>
 
-    <!-- 2. On charge nos modules -->
-    <script src='app/hero.js'></script>
-    <script src='app/mock-heroes.js'></script>
-    <script src='app/special.super.hero.service.js'></script>
-    <script src='app/app.component.js'></script>
-    <script src='app/hero-detail.component.js'></script>
-    <script src='app/app.module.js'></script>
-    <script src='app/main.js'></script>
+		<!--<script src="node_modules/@angular/router-deprecated/bundles/router-deprecated.umd.js"></script>-->
 
-  </head>
+		<!-- 2. On charge nos modules -->
+		<script src='app/hero.js'></script>
+		<script src='app/mock-heroes.js'></script>
+		<script src='app/special.super.hero.service.js'></script>
+		<script src='app/heroes.component.js'></script>
+		<script src='app/dashboard.component.js'></script>
+		<script src='app/routes.js'></script>
+		<script src='app/app.component.js'></script>
+		<script src='app/hero-detail.component.js'></script>
+		<script src='app/app.module.js'></script>
+		<script src='app/main.js'></script>
 
-  <!-- 3. On affiche notre application -->
-  <body>
-    <my-app>Loading...</my-app>
-  </body>
+	</head>
+
+	<!-- 3. On affiche notre application -->
+	<body>
+	<my-app></my-app>
+</body>
 
 </html>
